--- a/Report/Text Mining with Python 3 - REPORT.ipynb
+++ b/Report/Text Mining with Python 3 - REPORT.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# **Text Mining with Python 3**\n",
     "<br><br><br>\n",
-    "*Filippo Olivi*\n",
+    "*Filippo Olivi - 05/05/2020*\n",
     "\n",
-    "*The analysis was done as part of the UNCC Senior Project course*\n"
+    "*The report was made as part of the UNCC Senior Project course, under the supervision of Dr. Berardinelli*\n"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **What this guide/analysis is about**<br><br><br>"
+    "## **Introduction:**<br><br><br>"
    ]
   },
   {
@@ -36,34 +36,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Sources/Help received from:**<br>\n",
-    "<br>\n",
-    "The analysis is done extracting data from the body of several articles, stored on [MongoDB](https://www.mongodb.com/). The dataset is provided by [Kaggle](https://www.kaggle.com/datasets).\n",
-    "Moreover, I got some inspiration and help from another guide on [Datacamp](https://www.datacamp.com/community/tutorials/wordcloud-python) for working with graphics, in particular a WordCloud, and the very first pre-processing part."
+    "This report covers my first approach basic text mining, based on my experience working on a Senior Project on my senior year at UNCC. \n",
+    "It is meant to provide help and insight about how to start an analysis on the topic, since text mining as a whole is a really broad one which also spans different areas, and feeling a bit lost at the start would be normal. \n",
+    "The reader will be introduced to how I personally decided to set it up and which tools I used or considered using for this first approach."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**About the guide:**<br>\n",
+    "*How many times have you gone looking through a very discouraging number of IT jobs online, only to find out that most of them require very different skillsets from each other? What could the most required ones be? What would it be more efficient to learn first, in order to be eligible for the widest possible array of nowadays' IT jobs?*\n",
+    "\n",
+    "All of those questions that I frequently asked myself had a big part in helping me decide to pursue this topic further, when Dr. Berardinelli brought this idea up. \n",
+    "\n",
     "<br>\n",
-    "This is a guide to basic text mining, based on my experience working on a Senior Project on my senior year at UNCC. \n",
-    "It is meant in part to record and revisit my steps in making this project, in part to provide help and insight about how to start an analysis on the topic, since text mining as a whole is a really broad one, and feeling a bit lost at the start would be normal. \n",
-    "Here you will see how I decided to set it up and which tools I used or considered using."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<br>\n",
+    "\n",
     "**About the analysis:**<br>\n",
     "<br>\n",
-    "This particular analysis is supposed to be performed on a dataset filled with IT job postings. The purpose is to actually look into the text body of the post, search and filter them all to get some insight into a few things that might be of interest to anyone looking for a job. However, this analysis was first performed on a test dataset, which includes articles about a lot of different IT topics. While not necessarily always resulting in skills required for jobs, it was pretty close to what the end result would eventually be.<br>\n",
     "\n",
-    "In particular, the data I wanted to extract was:\n",
+    "This particular analysis is originally supposed to be performed on a dataset filled with job postings. The purpose is to actually filter out all the jobs that are not relevant (ones not associated with IT), look into the text body of the post, search and filter them all to get some insight into a few things that might be of interest to anyone looking for a job. In detail, the objective was to **extract popular and very demanded *skills*,** which the posting's writer usually includes in a list to find people for specific tasks.\n",
+    "\n",
+    "However, this report documents the first test before acting on the real dataset, instead performing a simulation making use of a much smaller and efficient (time and resource-wise) dataset. The contents of the set, which include articles about IT topics, cover a very wide range, from artificial intelligence to machine learning, including programming languages.\n",
+    "\n",
+    "The results, while not necessarily always resulting in the most wanted skills for jobs, was surprisingly *pretty close to what was to be expected, as far as IT jobs' requirements go*. Furthermore, documenting the test analysis here allows me to offer insight about how the initial script was written, which thoughts were followed.<br>\n",
+    "\n",
+    "In particular, the data I focused on extracting was:\n",
+    "\n",
     "     - The most mentioned IT skills, aka the most required ones\n",
     "     - The most popular combinations of IT skills, to make useful pairings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sources/Help received from:**<br>\n",
+    "<br>\n",
+    "The analysis was done extracting data from the body of several articles, stored on [MongoDB](https://www.mongodb.com/). The dataset is provided by [Kaggle](https://www.kaggle.com/datasets).\n",
+    "Moreover, I got some inspiration and help from another guide on [Datacamp](https://www.datacamp.com/community/tutorials/wordcloud-python) for working with graphics, in particular a WordCloud, and the very first pre-processing part."
    ]
   },
   {
@@ -77,6 +88,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## **The Process:**<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DISCLAIMER:** This is supposed to be a beginner-friendly report, and as such includes many insights in the form of comments. However, a **very basic understanding of how Python syntax and Python-related packages work is still required** to get a full understanding out of it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **0.**\n",
     "## **Tools / Packages used**<br><br><br>"
    ]
   },
@@ -121,7 +147,7 @@
    "source": [
     "Nothing particularly difficult here.<br> \n",
     "<br>\n",
-    "Even though the guide goes in order from the start to the end of the script, *importing all the packages was not done all at the very beginning*, because you could not know what exactly you would need.\n",
+    "Even though the guide goes in order from the start to the end of the script, *importing all the packages was not done all at the very beginning*, because I could not know what exactly I would need in the future.\n",
     "\n",
     "So, this part started with just a few of these statements, and got filled as the script was being written."
    ]
@@ -214,11 +240,11 @@
    "source": [
     "**From MongoDB:**<br>\n",
     "<br>\n",
-    "However this was not optimal as I wanted to access data directly from the database and collection hosted on a server I have access to, which uses MongoDB. For this reason, using **PyMongo** was essential in making the connection between the script and the database.\n",
+    "However this was not optimal as I wanted to access data directly from the database and collection hosted on a server I have access to (kindly provided to me by Dr. Berardinelli), which uses MongoDB. For this reason, using the **PyMongo** package was essential in making a bridge to connect the script and the database.\n",
     "\n",
-    "The only thing to be way of is that a *MongoDB must obviously be active on the server before*.\n",
+    "The only thing to be wary of is that a *MongoDB must obviously be active on the server before*.\n",
     "\n",
-    "Here is the code that nets the same result as the csv method:"
+    "Here is the code that nets the same result as the csv method, but connecting to the server instead:"
    ]
   },
   {
@@ -277,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this first part of it, the Datacamp guide (mentioned and linked in the sources) had a lot of great ways to get a nice first look into the dataset, which I used too here, adapted to my set:"
+    "For this first part of it, the Datacamp guide (mentioned and linked in the sources and bibliography) had a lot of great ways to get a nice first look into the dataset, which I used too here, adapted to my set:"
    ]
   },
   {
@@ -827,9 +853,9 @@
    "metadata": {},
    "source": [
     "**Processing is the most important part** now, because it is about cleaning out the text to avoid misleading and/or incorrect results. \n",
-    "In fact, the deeper you go and the more accurate and meticulous you are with this part, the better your output will be at the end.\n",
+    "In fact, the deeper I go and the more accurate and meticulous I am with this part, the better my output will be at the end.\n",
     "\n",
-    "I will divide this part in 3, to make it easier to follow."
+    "I divided this part in 3, to make it easier to follow."
    ]
   },
   {
@@ -838,9 +864,9 @@
    "source": [
     "**4.1 - A huge article:**<br>\n",
     "<br>\n",
-    "The first wordcloud only used the first article, but now that I am about to clean the text, it is time to work on all the articles, because the data I want to pull out has to be from the *whole dataset*!\n",
+    "The first wordcloud only used the first article, but now that I was about to clean the text, it was also time to work on all the articles, because the data I wanted to pull out had to be from the *whole dataset*!\n",
     "\n",
-    "So, the **first step is to chain together every entry of the dataset into one big article**:"
+    "So, the **first step was to chain together every entry of the dataset into one big article**:"
    ]
   },
   {
@@ -868,7 +894,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, now we have one huge article with all the words, and we can move onto the next step."
+    "As we can see, now I had only one huge article with all the words, and so I could move onto the next step."
    ]
   },
   {
@@ -877,7 +903,7 @@
    "source": [
     "**4.2 - Custom stopwords:**<br>\n",
     "<br>\n",
-    "Stopwords are very important, and *setting them properly is the very core of our cleaning process* here, because these are the irrelevant words we will have to take out of the text."
+    "Stopwords are very important, and *setting them properly is the very core of our cleaning process* here, because these are the irrelevant words I had to take out of the text, to avoid incorrect and misleading results."
    ]
   },
   {
@@ -920,7 +946,7 @@
     "<br>\n",
     "At this point, for analysing all the text word by word, I figured I could use a list of words and look into every single one of them. \n",
     "\n",
-    "Transforming a string into a list of words is called **Tokenizing**, and in this case, we can exclude all the punctuation that evaded our stopwords check before, all at one time:"
+    "Transforming a string into a list of words is called **Tokenizing**, and in this case, I could exclude all the punctuation that evaded the infamous stopwords check before, all at the same time:"
    ]
   },
   {
@@ -950,7 +976,11 @@
    "source": [
     "**4.3 - Tokenizing into a very clean list of words:**<br>\n",
     "<br>\n",
-    "We must keep in mind that when talking about IT, some words definitely need to go together (e.g. Data Science, Machine Learning, Neural Network, ...) so we must consider them as one. To obtain that result, some of the specific words have been merged with the one before of after it, case by case:"
+    "Keep in mind that when talking about IT, some words definitely need to go together (e.g. Data Science, Machine Learning, Neural Network, ...) so they must considered as one in this case. \n",
+    "\n",
+    "This was probably the biggest obstacle encountered in the analysis, and even though the solution I put together is rather rudimentary, it was pretty effective as it will be seen at the end.\n",
+    "\n",
+    "To obtain that result, some of the specific words have been merged with the one before of after it, case by case:"
    ]
   },
   {
@@ -1028,7 +1058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we have the filled list, clean and completely without stopwords, let's check how many words it has now:"
+    "Since I had the filled list, clean and completely without stopwords, checking the wordcount gave a very satisfying result:"
    ]
   },
   {
@@ -1053,7 +1083,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The articles have now been synthetized to a little more than 300 thousand words. \n",
+    "The articles have been synthetized to a little less than 300 thousand words. \n",
     "\n",
     "#### *A huge improvement, considering how before cleaning it up, it almost reached 4 million!*"
    ]
@@ -1077,9 +1107,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally having our processed list of all the words of every article and before running the queries, I wanted to take another shot at making a new wordcloud.\n",
+    "Finally having the processed list of all the words of every article, and before running the queries, I wanted to take another shot at making a new wordcloud.\n",
     "\n",
-    "*This time, it will use both the default stopwords and the already processed list of all the articles*, which will need to be detokenized back into text before (just for the wordcloud):"
+    "*This time, it used both the default stopwords and the already processed list of all the articles*, which however needed to be detokenized back into text before (just for the wordcloud):"
    ]
   },
   {
@@ -1125,7 +1155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Much better than the old one, now we can see a lot of terms that refer to the skills we are looking for in this analysis.\n",
+    "Much better than the old one, now I could see a lot of terms that refer to the skills I was looking for in this analysis.\n",
     "\n",
     "#### *Time to run the queries!*"
    ]
@@ -1134,9 +1164,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5.1 - Top 10 most common words:**<br>\n",
+    "**5.1 - Top 10 most common skills:**<br>\n",
     "<br>\n",
-    "For this one, we need to change the list into a dictionary, where:\n",
+    "For this one, changing the list into a dictionary was needed, where:\n",
     "\n",
     "- key = Word\n",
     "- value = How many times the word appeared in total"
@@ -1156,7 +1186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now easily print our skills and their presence percentage using a for loop and the **\"items()\" function**:"
+    "I could now easily print the skills and their presence percentage using a for loop and the **\"items()\" function**:"
    ]
   },
   {
@@ -1196,14 +1226,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This is the first one of the two answers I wanted to find and the most important one, if you remember what the two objectives I wanted to focus on were.\n",
+    "\n",
+    "Surprisingly even though the test dataset was not the one with the job postings, the most common and relevant words in the articles were still skills that are very often required in today's IT jobs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**5.2 - Top 10 most common pairings:**<br>\n",
     "<br>\n",
-    "Now I want to associate the skills in pairs, to make **combinations of skills** that may be useful for people looking into IT jobs.\n",
+    "Now I wanted to try and associate the skills in pairs, to make **combinations of skills** that may be useful for people looking into IT jobs that could learn more than one skill at the time. Since those are combination of two, I will call them bi-skillsets for this report.\n",
     "\n",
     "The query here may seem more complicated, but the code is pretty self-explanatory:\n",
     "\n",
-    "     - We make 2 new lists\n",
-    "     - Cycling the result gotten before 5 times, we fill the 2 lists with combinations and their corresponding frequencies\n"
+    "     - I made 2 new lists\n",
+    "     - Cycling the result gotten before 5 times, I filled the 2 lists with combinations and their corresponding frequencies\n"
    ]
   },
   {
@@ -1254,7 +1293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It worked! Now, to get the same output as the previous query, we need to make the list back into a dictionary:"
+    "It worked! Now, to get the same output as the previous query, I also needed to transform the list back into a dictionary:"
    ]
   },
   {
@@ -1274,7 +1313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As our final step, let's now print the **most common skills as pairings**:"
+    "As the final step, the most common skills (as pairings) or **bi-skillsets** were printed for my second query:"
    ]
   },
   {
@@ -1321,7 +1360,7 @@
    "metadata": {},
    "source": [
     "## **6.**\n",
-    "## **Conclusions and more to come**<br><br><br>"
+    "## **Conclusions**<br><br><br>"
    ]
   },
   {
@@ -1330,18 +1369,36 @@
    "source": [
     "**Conclusions:**<br>\n",
     "<br>\n",
-    "To wrap it up, the 2 queries ran correctly and worked out pretty good at the end. There is definitely more to be done, like adding other features and queries, or organizing the code better, but that is not the purpose of this guide (for now at least).<br>\n"
+    "To wrap it up, the two queries ran correctly and worked out pretty good at the end. \n",
+    "\n",
+    "Unexpectedly, the outputs showed how those skills are so important and frequent in today's world, that they can also make their appearance in common articles, not only job postings.\n",
+    "\n",
+    "Thus, these results are very promising, already **giving insight on what could be very helpful to study and master for the purpose of being a more appealing candidate** and having an impact in a wide range of today's IT industry.<br>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**More to come:**<br>\n",
-    "<br>\n",
-    "This guide will be updated when the following will have been fixed:\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Bibliography**<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [Kaggle](https://www.kaggle.com/datasets): Kaggle provided the dataset used for this analysis.\n",
     "\n",
-    " - The wordclouds forms can be upgraded and made more eye-catching"
+    "<br>\n",
+    "\n",
+    "- [Datacamp](https://www.datacamp.com/community/tutorials/wordcloud-python): Datacamp offers a very detailed article on how to setup and display Wordclouds, between other things. "
    ]
   }
  ],
